perf: reduce hot-path logging, guard JMX calls, virtual threads, larger LOB blocks
Agent-Logs-Url: https://github.com/Open-J-Proxy/ojp/sessions/4e44dba8-a156-4849-a9e0-a75fefe76edd

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>